[gd_scene load_steps=7 format=3 uid="uid://c5q75pfix860o"]

[ext_resource type="Script" path="res://_autoload_ui/reward_ui.gd" id="1_pakh8"]
[ext_resource type="Texture2D" uid="uid://bi3gd1307u21b" path="res://UI_inv_item_btn_drag/Assets/main panel.png" id="2_qrg8a"]
[ext_resource type="Texture2D" uid="uid://cl45mghcdduiu" path="res://UI_inv_item_btn_drag/Assets/x_normal.png" id="6_qn84l"]
[ext_resource type="Texture2D" uid="uid://bg6qvcnhpvs3g" path="res://UI_inv_item_btn_drag/Assets/x_pressed.png" id="7_fvvsd"]
[ext_resource type="Texture2D" uid="uid://bbunoh40chyjm" path="res://UI_inv_item_btn_drag/Assets/x_hover.png" id="8_s7vw3"]
[ext_resource type="Texture2D" uid="uid://bp32fmbn02hhj" path="res://UI_inv_item_btn_drag/Assets/x_disabled.png" id="9_pkxh0"]

[node name="Reward" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_pakh8")

[node name="Frame" type="NinePatchRect" parent="."]
texture_filter = 1
offset_left = 333.0
offset_top = 196.0
offset_right = 785.0
offset_bottom = 432.0
texture = ExtResource("2_qrg8a")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="reward_container" type="VBoxContainer" parent="Frame"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -70.0
offset_right = -13.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Frame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -210.0
offset_top = 15.0
offset_right = 214.0
offset_bottom = 38.0
grow_horizontal = 2
text = "Reward Screen"
horizontal_alignment = 1

[node name="Close_btn" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 749.0
offset_top = 200.0
offset_right = 781.0
offset_bottom = 232.0
action_mode = 0
texture_normal = ExtResource("6_qn84l")
texture_pressed = ExtResource("7_fvvsd")
texture_hover = ExtResource("8_s7vw3")
texture_disabled = ExtResource("9_pkxh0")
stretch_mode = 0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Close_btn" to="." method="_on_close_button_pressed"]
